--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-  "username": "your_username",
+  "username": "user",
   "password": "your_password",
   "server": "your_server",
   "mt5Pathway": "C:/Program Files/MetaTrader 5/terminal64.exe",
