--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
   "username": "user",
-  "password": "your_password",
+  "password": "password",
   "server": "your_server",
   "mt5Pathway": "C:/Program Files/MetaTrader 5/terminal64.exe",
   "symbols": ["EURUSD", "USDJPY", "XAUUSD"],
